--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -389,6 +389,27 @@ body, html {
     position: fixed;
 }
 
+/* Loading */
+#loading {
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   position: fixed;
+   display: block;
+   opacity: 0.7;
+   background-color: #fff;
+   z-index: 99;
+   text-align: center;
+}
+
+#loading-image {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  z-index: 100;
+}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
