alguns outros ajustes

--- a/flask/app/templates/ajusteTable.html
+++ b/flask/app/templates/ajusteTable.html
@@ -140,7 +140,7 @@
 </div>
 
  <div id="loading" style="display: none">
-    <img id="loading-image" src="{{ url_for('static', filename='imagens/load.gif') }}" alt="Loading..." />
+    <img id="loading-image" src="{{ url_for('static', filename='imagens/load2.gif') }}" alt="Loading..." />
 </div>
 
  {% include 'footer.html' %} 
