--- a/flask/app/templates/rolagem.html
+++ b/flask/app/templates/rolagem.html
@@ -55,6 +55,8 @@
 
             Plotly.newPlot('chartRolagem', graph, layout);
 
+            localStorage.clear();
+
         }
 
         $(document).ready(function() {
