--- a/flask/app/templates/rolagem.html
+++ b/flask/app/templates/rolagem.html
@@ -55,7 +55,7 @@
 
             Plotly.newPlot('chartRolagem', graph, layout);
 
-            localStorage.clear();
+            //localStorage.clear();
 
         }
 
